test/fail/macro-ident-undeclared.rnp
macro x() {
  $a
}
x();
---
ReferenceError: $a is not declared
fail/macro-ident-undeclared.rnp:2:3
  $a
  ^^
